--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "1.7.6",
     "@shopify/react-native-skia": "v2.0.0-next.4",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-orm": "^0.44.2",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-drizzle-studio-plugin": "^0.2.0",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
@@ -20,6 +23,7 @@
     "expo-router": "~5.1.3",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.10",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
@@ -41,6 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
